2011-08-09  Stefano Lattarini  <stefano.lattarini@gmail.com>

	test defs: few more sanity checks
	* tests/defs: Catch some more (very unlikely) set-up or internal
	errors, and diagnose them explicitly.  This is intended mostly
	to be a theoretic-only improvement.

2011-08-09  Stefano Lattarini  <stefano.lattarini@gmail.com>

	test defs: really make them "set -e" clean
	Motivated by a spurious failure of test `instsh3-w.shtst' on
	Solaris 10.
	* tests/defs: Make really "set -e" clean, to avoid spurious
	failures in case this file is sourced by a test script that has
	already set the `errexit' flag.  To be sure we don't regress,
	move the `set -e' call much earlier, and make the comment telling
	about the expected "set -e" cleanliness more loud and outstanding.

2011-08-09  Stefano Lattarini  <stefano.lattarini@gmail.com>

	self tests: register an expected failures with Solaris /bin/sh
	Solaris 10 /bin/sh erroneously exit with success right away when
	the following three conditions are met at the same time:
	 1. the `errexit' flag is active,
	 2. an exit trap is installed, and
	 3. a non-existing command is issued.
	* tests/self-exit.tap: When that bug is detected, issue an XFAIL
	rather than a FAIL.  Since we are at it, improve by avoiding
	creation of stray temporary files when testing for non-executable
	commands.

2011-08-09  Stefano Lattarini  <stefano.lattarini@gmail.com>

	gitignore: update and improve for the testsuite files
	* tests/.gitignore: Don't ignore temporary partial log files,
	autogenerated tests and makefile fragments that are not used
	anymore.  Anchor all the remaining patterns.

2011-08-09  Stefano Lattarini  <stefano.lattarini@gmail.com>

	self tests: some new uses of TAP, few extensions
	* tests/self-check-me.test: Renamed ...
	* tests/self-check-me.tap: .. to this, and converted to use TAP.
	* tests/self-check-exit.test: Renamed ...
	* tests/self-check-exit.tap: .. to this, and converted to use TAP.