@@ -1,5 +1,16 @@
 2011-08-09  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	self tests: avoid spurious output on console, and related fixlets
+	* tests/self-check-cleanup.test: Set `$stderr_fileno_' to `2'
+	in the self tests, to avoid spurious diagnostic on console.
+	* tests/self-check-exit.tap: Only unset `am_explicit_skips' and
+	`$stderr_fileno_' in the self tests, not at the global level, it
+	is more correct.
+	($init): New variable, to reduce code duplication.
+	Some refactoring and adjustments to the name of the tests.
+
+2011-08-09  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	test defs: few more sanity checks
 	* tests/defs: Catch some more (very unlikely) set-up or internal
 	errors, and diagnose them explicitly.  This is intended mostly
